ui fixes: ensure react-select placeholders do not wrap, fix acceptance text for user privacy policy

--- a/src/front-end/sass/index.scss
+++ b/src/front-end/sass/index.scss
@@ -863,6 +863,7 @@ nav.navbar .nav-link:hover {
 
     &__placeholder {
       color: $input-placeholder-color;
+      white-space: nowrap;
     }
 
     &__option {
